<resources>
    <string name="app_name">GROVE FRESH</string>
    <string name="title_activity_input_phone">Input Phone Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login via Phone Number</string>
    <string name="action_next">Continue</string>
    <string name="action_skip">Skip</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_opt">Input OTP</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="click_continue_to_receive_otp">Click continue to verify your phone number. We will send SMS to verify.</string>
    <string name="news">News</string>
    <string name="member_card">Member Card</string>
    <string name="no_transaction">You don\'t have any transaction yet.</string>
    <string name="transaction_history">Transaction History</string>
    <string name="total_score">Total Score: %s</string>
    <string name="profile_info">Profile Info</string>
    <string name="about_us">About Us</string>
    <string name="policy">Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Log Out</string>
    <string name="hot_line">Hotline: %s</string>
    <string name="setting">Settings</string>
    <string name="score">Score: %s</string>
    <string name="fullname">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="action_done">Apply</string>
    <string name="prompt_full_name">Input your full name</string>
    <string name="prompt_birthday">Input your birthday</string>
    <string name="error_empty_name">Please input your name.</string>
    <string name="error_empty_email">Please input your email.</string>
    <string name="error_empty_birthday">Please enter your birthday.</string>
    <string name="error_name_too_long">"Name should not exceed 100 chacraters."</string>
    <string name="error_email_too_long">Email should not be ecceed 100 characters.</string>
    <string name="error_email_invalid">Invalid email.</string>
    <string name="promotion">Promotion</string>

    <string name="take_from_camera">Take from camera</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="action_agree">Agree</string>
    <string name="dialog_alert_error_title">Error</string>
    <string name="dialog_alert_error_message">An error occurs. Please try again later.</string>
    <string name="please_wait">Please wait...</string>
    <string name="notify">Announcement</string>
    <string name="no_notify">You don\'t have any announcement.</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="choose_language">Choose language</string>
    <string name="view_hotnews_details">View Details</string>
    <string name="shop">Shopping</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="delivery_address">Delivery address</string>
    <string name="prompt_address">Input address</string>
    <string name="e_invoice">E-Invoice Information</string>
    <string name="company_name">Company\'s name</string>
    <string name="prompt_company_name">Input company\'s name</string>
    <string name="address">Address</string>
    <string name="prompt_company_tax_code">Input company\'s tax code</string>
    <string name="company_tax_code">Tax Code</string>
    <string name="note">Note</string>
    <string name="prompt_note">Enter note for shop</string>
    <string name="total_price">Total Price: %s</string>
    <string name="finish">Finish</string>
    <string name="finish_order_announcement">System has already received the order. Our sales will contact you soon to delivery.</string>
    <string name="dialog_alert_finish_order">Confirm order</string>
    <string name="title_product">Products</string>
    <string name="title_delivery">Delivery Information</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="close">Close</string>
</resources>